--- a/LUMEN/package.json
+++ b/LUMEN/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.30.2",
     "recharts": "^2.15.4",
     "zustand": "^4.5.7"
